crates/stylex-shared/tests/transform_override_vars_test/snapshots/fold__transform_override_vars_test__create_theme__variables_order_does_not_change_the_class_name_hash-2.snap
---
source: crates/stylex-shared/tests/transform_override_vars_test/create_theme.rs
expression: output_v2
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import stylex from 'stylex';
export const buttonTheme = {
    bgColor: "var(--xgck17p)",
    bgColorDisabled: "var(--xpegid5)",
    cornerRadius: "var(--xrqfjmn)",
    fgColor: "var(--x4y59db)",
    __themeName__: "x568ih9"
};
_inject2(".xtrlmmh, .xtrlmmh:root{--xgck17p:green;--xpegid5:antiquewhite;--xrqfjmn:6px;--x4y59db:coral;}", 0.5);
_inject2("@media (prefers-color-scheme: dark){.xtrlmmh, .xtrlmmh:root{--xgck17p:lightgreen;--xpegid5:floralwhite;}}", 0.6);
_inject2("@media print{.xtrlmmh, .xtrlmmh:root{--xgck17p:transparent;}}", 0.6);
