crates/stylex-shared/tests/transform_override_vars_test/snapshots/fold__transform_override_vars_test__create_theme__variables_order_does_not_change_the_class_name_hash.snap
---
source: crates/stylex-shared/tests/transform_override_vars_test/create_theme.rs
expression: output_v1
---
import stylex from 'stylex';
export const buttonTheme = {
    bgColor: "var(--xgck17p)",
    bgColorDisabled: "var(--xpegid5)",
    cornerRadius: "var(--xrqfjmn)",
    fgColor: "var(--x4y59db)",
    __varGroupHash__: "x568ih9"
};
